[gd_scene load_steps=13 format=3 uid="uid://b5ca0xunrblw1"]

[ext_resource type="Script" path="res://Scripts/Menus/menu.gd" id="1_su8jg"]
[ext_resource type="Texture2D" uid="uid://2riuxnw0iv7m" path="res://Images/Game Logo/Splash_Art 2.png" id="2_62lac"]
[ext_resource type="Texture2D" uid="uid://ri1xbkuf5fnb" path="res://Images/Game Logo/Ari_GameTitle.png" id="3_pl5hq"]
[ext_resource type="FontFile" uid="uid://b2nrwwb8gsbqu" path="res://Fonts/Banana Stick.otf" id="4_vsrfb"]
[ext_resource type="StyleBox" uid="uid://bh60l478xylq6" path="res://Scripts/UI/hover.tres" id="5_mkxku"]
[ext_resource type="StyleBox" uid="uid://b3j5t3i5gl85u" path="res://Scripts/UI/orangebuttons.tres" id="6_07ll1"]
[ext_resource type="Script" path="res://Scripts/Menus/play.gd" id="7_r77ke"]
[ext_resource type="AudioStream" uid="uid://b3ogw6psrsooj" path="res://Audio/Background/Background_Music (1).wav" id="8_fg0c1"]
[ext_resource type="PackedScene" uid="uid://cnj2ximnrwytp" path="res://3D Assets FBX/Character Assets/Murphy_Hand_Grab_Anim.fbx" id="9_o1vvh"]
[ext_resource type="AudioStream" uid="uid://cs7f63m5oghyl" path="res://Audio/Sound effects/button.wav" id="10_3k3nb"]

[sub_resource type="FontVariation" id="FontVariation_xcnva"]
base_font = ExtResource("4_vsrfb")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oky3b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_su8jg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = -0.0432099
anchor_right = 0.368924
anchor_bottom = 0.632716
offset_left = 1.0
offset_right = 4801.0
offset_bottom = 2700.0
scale = Vector2(0.24, 0.24)
size_flags_horizontal = 4
texture = ExtResource("2_62lac")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 681.0
offset_top = 8.0
offset_right = 5481.0
offset_bottom = 2808.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_pl5hq")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 716.0
offset_top = 301.0
offset_right = 1113.0
offset_bottom = 607.0
size_flags_horizontal = 4
focus_mode = 2
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_hover_color = Color(0.687678, 0.946178, 1, 1)
theme_override_colors/font_focus_color = Color(0.686275, 0.945098, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_xcnva")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_oky3b")
theme_override_styles/hover = ExtResource("5_mkxku")
theme_override_styles/pressed = ExtResource("6_07ll1")
theme_override_styles/normal = ExtResource("6_07ll1")
text = "Play"
script = ExtResource("7_r77ke")

[node name="Settings" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_hover_color = Color(0.687678, 0.946178, 1, 1)
theme_override_colors/font_focus_color = Color(0.686275, 0.945098, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_xcnva")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_oky3b")
theme_override_styles/hover = ExtResource("5_mkxku")
theme_override_styles/pressed = ExtResource("6_07ll1")
theme_override_styles/normal = ExtResource("6_07ll1")
text = "Settings"

[node name="Credits" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_hover_color = Color(0.687678, 0.946178, 1, 1)
theme_override_colors/font_focus_color = Color(0.686275, 0.945098, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_xcnva")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_oky3b")
theme_override_styles/hover = ExtResource("5_mkxku")
theme_override_styles/pressed = ExtResource("6_07ll1")
theme_override_styles/normal = ExtResource("6_07ll1")
text = "Credits"

[node name="Exit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_hover_color = Color(0.687678, 0.946178, 1, 1)
theme_override_colors/font_focus_color = Color(0.686275, 0.945098, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_xcnva")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_oky3b")
theme_override_styles/hover = ExtResource("5_mkxku")
theme_override_styles/pressed = ExtResource("6_07ll1")
theme_override_styles/normal = ExtResource("6_07ll1")
text = "Exit"

[node name="background_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_fg0c1")
autoplay = true

[node name="Murphy_Hand_Grab_Anim" parent="." instance=ExtResource("9_o1vvh")]

[node name="button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_3k3nb")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
